# emotion_tracker_backend

./: README.md  pyproject.toml
src/: __init__.py
src/entities/: __init__.py  emotion_record.py  pyproject.toml  recommendations.py  user.py  user_settings.py
src/interface_adapters/: __init__.py
src/interface_adapters/gateways/: password_hasher.py
src/interface_adapters/repositories/: emotion_record_repository.py  user_repository.py
src/use_cases/: __init__.py  analyze_notes_with_llm_use_case.py  analyze_trends_use_case.py  authenticate_user_use_case.py  export_data_use_case.py  generate_report_use_case.py  get_emotion_history_use_case.py  get_recommendation_use_case.py  process_payment_use_case.py  register_user_use_case.py  send_notification_use_case.py  submit_daily_checklist_use_case.py  update_user_settings_use_case.py
