[tool.poetry]
name = "emotion-tracker-backend"
version = "0.1.0"
description = "Emotion Tracker Project"
authors = ["Kseniya Machihina, Igor Ischenko, Aynur Nuryyeva, Evgeniy Shatunov"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.1"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
pydantic = {extras = ["email"], version = "^2.12.0"}
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
httpx = "^0.28.1"
black = "^26.3.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]  # Папка для измерения покрытия
branch = true     # Измерять покрытие веток (if/else)
omit = [
    "*/__init__.py",           # Исключить пустые __init__
    "*/config.py",             # Исключить конфиги
    "*/main.py",               # Точка входа (сложно тестировать)
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",        # Строки с этой пометкой игнорируются
    "def __repr__",            # Исключить методы __repr__
    "raise AssertionError",    # Исключить тестовые ассерты
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",       # Исключить аннотации для type checkers
]
fail_under = 80               # ❗ Провалить тесты, если покрытие < 80%
show_missing = true           # Показывать номера непокрытых строк

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
