[tool.poetry]
name = "emotional-health-tracker"
version = "0.1.0"
description = "Трекер эмоционального здоровья"

[tool.poetry.dependencies]
python = "^3.9"
bcrypt = "^4.0"
pydantic = "^2.0"
python-dateutil = "^2.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.0"
mypy = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100